# inboxclaw

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  ROADMAP.md  config.example.yaml  config.schema.json  main.py  package-lock.json  pyproject.toml  sse_viewer.html
.junie/: guidelines.md
docs/: app-lifecycle.md  cli.md  coalescing.md  configuration.md  data-model.md  getting-started-openclaw.md  google-auth-cli.md  index.md  kv-general.md  pipeline.md  sink-command.md  sink-http-pop.md  sink-http-pull.md  sink-sse.md  sink-webhook.md  sink-win11toast.md  sinks-general.md  source-faktury-online.md  source-fio.md  source-gmail.md  source-google-calendar.md  source-google-docs.md  source-google-drive.md  source-home-assistant.md  source-mock.md  source-nordigen.md  sources-general.md  templating.md  use-cases.md
e2e/: README.md  run_e2e.py  test_http_pop.py  test_http_pull.py  test_sse.py  test_webhook.py  utils.py
scripts/: generate_schema.py
src/: app.py  config.py  database.py  initialization.py  main.py  schemas.py  services.py
tests/: test_cleanup.py  test_coalescence_service.py  test_coalescer.py  test_command_sink.py  test_command_sink_robust.py  test_config.py  test_config_command.py  test_config_validation.py  test_diff_util.py  test_event_writer.py  test_events_commands.py  test_faktury_online_source.py  test_filtering.py  test_fio_source.py  test_gmail_filter.py  test_gmail_source.py  test_google_calendar_filter.py  test_google_calendar_source.py  test_google_drive_restored.py  test_google_drive_source.py  test_http_pop_sink.py  (+20 more)
(+52 files in other folders)
