[project]
name = "inboxclaw"
version = "0.1.0"
description = "Unified inbox for your openclaw instance"
requires-python = ">=3.10"
dependencies = [
    "click",
    "fastapi",
    "google-api-python-client",
    "google-auth-oauthlib",
    "httpx",
    "pydantic",
    "pytimeparse>=1.1.8",
    "pyyaml",
    "python-dotenv>=1.2.2",
    "ruamel.yaml>=0.18.15",
    "sqlalchemy",
    "sse-starlette",
    "uvicorn",
    "websockets",
    "win11toast>=0.35; sys_platform == 'win32'"
]

[project.scripts]
inboxclaw = "src.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
